src/Styles/Socials.css
.socials-container {
    display: flex;
    justify-content: center;
    padding: 80px 0;
}


.socials-box {
    width: min(90vw, 1400px);
    display: flex;
    align-items: center;
    padding: 25px;
    border: 2px solid #7047A5;
    border-radius: 10px;
    background-color: #00000095;
    backdrop-filter: blur(5px);
    gap: 20px;
    box-sizing: border-box;
}


.socials-box h2 {
    color: gold;
    font-family:'Montserrat',sans-serif;
    font-weight:400;
    font-size:2rem;
    white-space:nowrap;
    padding-right:35px;
    border-right:1px solid #7047A5;
}



.socials-links {
    display:flex;
    align-items:center;
    justify-content:space-between;
    flex:1;
    gap:25px;
    flex-wrap:nowrap;
}



.socials-sites {
    display:flex;
    align-items:center;
    gap:12px;
    color:white;
    text-decoration:none;
    font-family:'Montserrat',sans-serif;
    font-size:1.2rem;
    white-space:nowrap;
    transition: all 0.3s ease;
}

.socials-sites span {
    transition: all 0.3s ease;
}

.socials-sites i {
    width:42px;
    height:42px;
    display:flex;
    justify-content:center;
    align-items:center;
    border-radius:50%;
    border:2px solid transparent;
    font-size:1.3rem;
    transition: all 0.3s ease;
}

.socials-sites:hover {
    color:gold;
}

.socials-sites:hover i {
    border-color:gold;
    color:gold;
    transform:scale(1.15);
    box-shadow:0 0 15px rgba(255,215,0,.45);
}

.socials-sites:hover span {
    transform:scale(1.08);
}
.gmail:hover {
    /*color:white;*/
    cursor: pointer;
}

/*.gmail:hover i {
    border-color:transparent;
    box-shadow:none;
    transform:none;
}*/

@media(max-width:1400px){

    .socials-box{
        width:80vw;
        flex-direction:column;
        align-items:center;
    }

    .socials-box h2{
        width:100%;
        border-right:none;
        border-bottom:1px solid #7047A5;
        padding-right:0;
        padding-bottom:20px;
        text-align:center;
    }

    .socials-links{
        width:100%;
        justify-content:center;
        flex-wrap:nowrap;
        gap:35px;
    }

    .socials-sites{
        width:auto;
        flex-wrap:nowrap;
        justify-content:center;
        gap:10px;
        padding:0;
    }

}





@media(max-width:768px){

    .socials-box{
        width:85vw;
        padding:20px;
    }

    .socials-box h2{
        font-size:1.5rem;
        text-align:center;
    }

    .socials-links{
        flex-direction:column;
        align-items:flex-start;
    }

    .socials-sites{
        font-size:1.3rem;
    }

}


@media(min-width:769px) and (max-width:1070px){

    .socials-box{
        width:85vw;
    }

    .socials-links{
        flex-direction:column;
        align-items:center;
        width:100%;
    }

    .socials-sites{
        width:auto;
        justify-content:center;
        font-size:1rem;
    }

}

